// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VmStatus vm /> renders correctly 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-off"
  />,
  "Off",
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmDisksCloning 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/virtualmachines/cloudinit-test-vm/events"
  >
    Preparing Disks
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmDisksImportFailed 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/virtualmachines/cloudinit-test-vm/events"
  >
    Disk Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmDisksImportPodFailed 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/virtualmachines/cloudinit-test-vm/events"
  >
    Preparing Disks
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmDisksImportPreparing 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/virtualmachines/cloudinit-test-vm/events"
  >
    Preparing Disks
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmDisksImportPreparing1 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/virtualmachines/cloudinit-test-vm/events"
  >
    Preparing Disks
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmDisksImporting 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/virtualmachines/cloudinit-test-vm/events"
  >
    Preparing Disks
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmDisksImporting1 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/virtualmachines/cloudinit-test-vm/events"
  >
    Preparing Disks
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmDisksUploading 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/virtualmachines/cloudinit-test-vm/events"
  >
    Preparing Disks
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmFailure 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
    title="Failure backend description"
  >
    VM Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmFailure1 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
    title="Failure backend description"
  >
    VM Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmMigrating 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-migration"
  />,
  "Migrating",
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmOff 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-off"
  />,
  "Off",
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmPhaseFailed 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-on-running"
  />,
  "Running",
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmPodError 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="Back-off pulling image message"
  >
    Pod Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmRunning 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-on-running"
  />,
  "Running",
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmStarting 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="fail description for Ready"
  >
    Starting
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmStartingNoPod 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  "Starting",
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmStartingPodError 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="Pod scheduling failed."
  >
    Pod Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmStartingPodHasNoConditions 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Starting
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmWaiting 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly: vmWaitingNoStatus 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmDisksCloning 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/pods/clone-target-pod-x9c99/events"
  >
    Cloning disk datavolumeclonetemplatedisk
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly: vmDisksImportFailed 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/pods/importer-datavolume-url-x9c99/events"
  >
    datavolumeimportdisk disk failed
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly: vmDisksImportPodFailed 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/pods/importer-datavolume-url-x9c99/events"
  >
    datavolumeimportdisk disk failed
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly: vmDisksImportPreparing 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/pods/importer-datavolume-url-x9c99/events"
  >
    Preparing disk datavolumeimportdisk
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly: vmDisksImportPreparing1 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/pods/importer-datavolume-url-x9c99/events"
  >
    Preparing disk datavolumeimportdisk
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly: vmDisksImporting 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/pods/importer-datavolume-url-x9c99/events"
  >
    Importing disk datavolumeimportdisk
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly: vmDisksImporting1 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/pods/importer-datavolume-url-x9c99/events"
  >
    Importing disk datavolumeimportdisk
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly: vmDisksUploading 1`] = `
<div>
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-import"
  />
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/default/pods/cdi-upload-dv-upload-template/events"
  >
    Uploading disk datavolumeuploadtemplatedisk
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly: vmFailure 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
    title="Failure backend description"
  >
    VM Error
  </a>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmFailure1 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
    title="Failure backend description"
  >
    VM Error
  </a>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmMigrating 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-migration"
  />,
  "Migrating",
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmOff 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-off"
  />,
  "Off",
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmPhaseFailed 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-on-running"
  />,
  "Running",
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmPodError 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="Back-off pulling image message"
  >
    Pod Error
  </a>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmRunning 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-on-running"
  />,
  "Running",
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmStarting 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="fail description for Ready"
  >
    Starting
  </a>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmStartingNoPod 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  "Starting",
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmStartingPodError 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-error-circle-o"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    title="Pod scheduling failed."
  >
    Pod Error
  </a>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmStartingPodHasNoConditions 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Starting
  </a>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmWaiting 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly: vmWaitingNoStatus 1`] = `
Array [
  <span
    aria-hidden="true"
    class="kubevirt-vm-status__icon pficon pficon-pending"
  />,
  <a
    class="kubevirt-vm-status__link"
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>,
]
`;
